--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -20,12 +21,11 @@
     "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "next": "13.4.13",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lazy-load-image-component": "^1.6.0",
-    "react-moment": "^1.1.3",
-    "react-tailwindcss-datepicker": "^1.6.6",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
